--- a/EcommSimpleShop/Views/Shared/_Layout.cshtml
+++ b/EcommSimpleShop/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@using EcommSimpleShop.Data
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
@@ -25,6 +29,12 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-controller="Product" asp-action="Index">Products</a>
                     </li>
+                    @if (SignInManager.IsSignedIn(User))
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Product" asp-action="Add">Add product</a>
+                        </li>
+                    }
                 </ul>
             </div>
         </div>
