--- a/EcommSimpleShop/Views/_ViewImports.cshtml
+++ b/EcommSimpleShop/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using EcommSimpleShop
 @using EcommSimpleShop.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Core.Flash
