--- a/EcommSimpleShop/Views/Product/Edit.cshtml
+++ b/EcommSimpleShop/Views/Product/Edit.cshtml
@@ -1,7 +1,7 @@
 @model AddProductModel
 
 @{
-    ViewData["Title"] = "Add product";
+    ViewData["Title"] = "Edit product";
 }
 
 <form asp-controller="Product" asp-action="Edit" method="post" enctype="multipart/form-data">
