--- a/EcommSimpleShop/Views/Shared/_Layout.cshtml
+++ b/EcommSimpleShop/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                             <a class="nav-link text-dark" asp-controller="Product" asp-action="Add">Add product</a>
                         </li>
                     }
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-controller="Cart" asp-action="Index">Cart</a>
+                    </li>
                 </ul>
             </div>
         </div>
