--- a/EcommSimpleShop/Views/Product/Details.cshtml
+++ b/EcommSimpleShop/Views/Product/Details.cshtml
@@ -1,8 +1,11 @@
+@using EcommSimpleShop.Data
 @model EcommSimpleShop.Data.Product
 
 @{
-    ViewData["Title"] = "Add product";
+    ViewData["Title"] = "Product details";
 }
+
+<div flashes></div>
 
 <div class="col-12">
     <div class="row">
@@ -16,6 +19,10 @@
             <h3>
                 @((Model.Price / 100.0).ToString("N2")) zł
             </h3>
+            <form asp-controller="Cart" asp-action="Add" asp-route-id="@Model.Id" asp-route-returnUrl="@Url.ActionContext.HttpContext.Request.Path" method="post">
+                <input name="quantity" type="number" max="@Model.Quantity" value="1"/> (@Model.Quantity available)
+                <input type="submit" class="btn btn-primary" value="Add to cart"/>
+            </form>
         </div>
     </div>
 </div>
