--- a/EcommSimpleShop/Views/Shared/_Layout.cshtml
+++ b/EcommSimpleShop/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Product" asp-action="Add">Add product</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Order" asp-action="Index">Orders</a>
+                        </li>
                     }
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-controller="Cart" asp-action="Index">Cart</a>
